Bug 54868 - [sna g33 suse] render errors under kwin+compositing of popup menus aligned to screen left
Summary: [sna g33 suse] render errors under kwin+compositing of popup menus aligned to...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-13 14:40 UTC by Jiri Slaby
Modified: 2012-09-13 20:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
bug (8.93 KB, image/png)
2012-09-13 14:40 UTC, Jiri Slaby
no flags Details
Xorg.log (48.81 KB, text/plain)
2012-09-13 14:41 UTC, Jiri Slaby
no flags Details

Description Jiri Slaby 2012-09-13 14:40:47 UTC
Created attachment 67108 [details]
bug

When I open in firefox a live (rss) bookmark, choose some line and wait there with mouse cursor a bit, tooltip appears. But there is a rectangle arounf the tooltip which is rendered with some random text as in the attached picture.
Comment 1 Jiri Slaby 2012-09-13 14:41:18 UTC
Created attachment 67109 [details]
Xorg.log
Comment 2 Chris Wilson 2012-09-13 14:48:00 UTC
To be clear, is this only with the rss tooltips or any firefox tooltip?
Comment 3 Jiri Slaby 2012-09-13 14:49:35 UTC
(In reply to comment #2)
> To be clear, is this only with the rss tooltips or any firefox tooltip?

Only the rss ones.
Comment 4 Chris Wilson 2012-09-13 15:24:35 UTC
To test my understanding and your patience! :)

Any rss live bookmarks? From the toolbar or from the bookmark menu?

I'm currently trying to reproduce using iceweasel-10, if that matters, with the anandtech.com rss bookmarks.
Comment 5 Chris Wilson 2012-09-13 16:31:15 UTC
Looks also to tie in with the theme. Which gtk theme are you using?
Comment 6 Jiri Slaby 2012-09-13 17:42:34 UTC
(In reply to comment #4)
> To test my understanding and your patience! :)
> 
> Any rss live bookmarks? From the toolbar or from the bookmark menu?

Hehe. It needn't be rss at all. It's just a coincidence that I have it on the very left. Every drop-down menu exposes this. The additional condition is that it has to appear on the left edge of the screen. So if I move the firefox window so that some drop-down menu appears on the left edge of the screen, the issue is there.

> I'm currently trying to reproduce using iceweasel-10, if that matters, with the
> anandtech.com rss bookmarks.

This is Firefox 16. gtk theme should be oxygen -- I forgot how this is set. (I use KDE4 with compositing.)
Comment 7 Jiri Slaby 2012-09-13 17:46:27 UTC
(In reply to comment #6)
> it has to appear on the left edge of the screen. So if I move the firefox
> window so that some drop-down menu appears on the left edge of the screen, the
> issue is there.

The same for thunderbird -> file -> save as. A submenu which appears 
(to file or template) is surrounded by the rectangle too.
Comment 8 Chris Wilson 2012-09-13 17:55:16 UTC
Ok, I can reproduce render corruption of the popup menu when it is aligned to left-hand edge of the screen under kwin + Xrender compositing
Comment 9 Chris Wilson 2012-09-13 19:19:54 UTC
For those following along at home,

#define NO_COMPOSITE 1 in src/sna/gen3_render.c seems to be at the heart of the issue.
Comment 10 Chris Wilson 2012-09-13 19:43:34 UTC
This is what I found locally, can you please test to see if it was indeed the same issue?

commit 6c7f998f7bda4f4f1286e079412d5d3a5b2eb073
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Sep 13 20:41:23 2012 +0100

    sna: Fix BLT composite offset
    
    Reported-by: Jiri Slaby <jirislaby@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54868
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 11 Jiri Slaby 2012-09-13 20:11:13 UTC
(In reply to comment #10)
> This is what I found locally, can you please test to see if it was indeed the
> same issue?

Yes, looks like it's gone now. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.